# Immolate

./: .gitignore  CMakeLists.txt  Existing Filters.md  Immolate.def  README.md  build.bat  enum_to_printf.py  enum_to_str.py  filter.cl  flake.nix  functions.hpp  immolate.c  immolate.cl  immolate.cpp  immolate.hpp  instance.hpp  items.hpp  main.cpp  search.cl  search.hpp  seed_search.cl  util.hpp
docs/: DOCUMENTATION.md  existingfilters.md  getting_started.md  troubleshooting.md
examples/: high_score.cl
filters/: analyzer.cl  analyzer_extended.cl  bad_seeds.cl  buggy_erratic.cl  buggy_seeds.cl  cavendish.cl  double_legendary.cl  double_orbital.cl  emperor_fool.cl  erratic_flush_five.cl  erratic_ranks.cl  erratic_suits.cl  eternal.cl  four_deadly_jokers.cl  high_score.cl  high_score_demo.cl  legendary_skip.cl  longest_joker_name.cl  low_percent.cl  max_cash_ante_1.cl  most_jokers.cl  orbital_test.cl  perkeo.cl  perkeo_analyzer.cl  perkeo_observatory.cl  purchaseless.cl  red_poly_glass.cl  showman_double_legendary.cl  showman_emperor_fool.cl  spectral_packs.cl  speedrun.cl  speedrun_skipless.cl  straight_flushes.cl
lib/: algos.cl  algos.h  cache.cl  debug.cl  functions.cl  immolate.cl  immolate.h  instance.cl  items.cl  seed.cl  util.cl  util.h
src/: functions.hpp  immolate.cpp  immolate.hpp  instance.hpp  items.hpp  main.cpp  rng.hpp  search.hpp  util.hpp
